Update print statement to 'Goodbye World'

--- a/analysis/index.html
+++ b/analysis/index.html
@@ -387,9 +387,9 @@
                     { id: "d22", question: "22.   A `plot.bar()` creates a vertical bar plot, while `plot.__BLANK__()` creates a horizontal one.", answer: "barh" },
                     { id: "d23", question: "23.   The default join type for `pd.merge` is the __BLANK__ join.", answer: "inner" },
                     { id: "d24", question: "24.   The `how='__BLANK__'` join uses all key combinations observed in both tables together.", answer: "outer" },
-                    { id: "d25", question: "25. (5.1 Notes) SQL stands for __BLANK__ __BLANK__ __BLANK__.", answer: "Structured Query Language" },
-                    { id: "d26", question: "26. (5.1 Notes) The default DBMS for Python is __BLANK__, accessed via a built-in module.", answer: "SQLite" },
-                    { id: "d27", question: "27. (5.1 Notes) The SQL clause `__BLANK__` filters rows *after* they have been grouped.", answer: "HAVING" }
+                    { id: "d25", question: "25. SQL stands for __BLANK__ __BLANK__ __BLANK__.", answer: "Structured Query Language" },
+                    { id: "d26", question: "26.  The default DBMS for Python is __BLANK__, accessed via a built-in module.", answer: "SQLite" },
+                    { id: "d27", question: "27.  The SQL clause `__BLANK__` filters rows *after* they have been grouped.", answer: "HAVING" }
                 ]
             }
         };
@@ -729,4 +729,5 @@
     </script>
 
 </body>
+
 </html>
